# skills

skills/0x5446/ohmytoken/: _meta.json
skills/0xclanky/captcha-relay/: _meta.json
skills/0xfantommenace/0xarchive/: _meta.json
skills/0xmomo-ngclubs/universal-trading/: _meta.json
skills/0xrikt/claw-werewolf/: _meta.json
skills/0xsnackbaker/moltycash/: _meta.json
skills/0xsoydev/clankerkit/: _meta.json
skills/0xterrybit/odos/: _meta.json
skills/10madh/linkedin-bulk-connect/: _meta.json
skills/10madh/linkedin-followup/: _meta.json
skills/1991513ccie-png/interior-arranging/: SKILL.md  _meta.json
skills/1991513ccie-png/netlify-deploy/: SKILL.md  _meta.json
skills/1991513ccie-png/saas-growth/: _meta.json
skills/1999azzar/system-architect/: _meta.json
skills/1kalin/afrexai-agent-observability/: _meta.json
skills/1kalin/afrexai-ai-governance/: README.md  SKILL.md  _meta.json
skills/1kalin/afrexai-ai-spend-audit/: _meta.json
skills/1kalin/afrexai-community-growth-engine/: _meta.json
skills/1kalin/afrexai-compensation-planner/: _meta.json
skills/1kalin/afrexai-conversion-copywriting/: _meta.json
skills/1kalin/afrexai-epa-compliance/: _meta.json
skills/1kalin/afrexai-fitness-engine/: _meta.json
skills/bezko/workspace-scruffy/klausnomi/: AGENTS.md  KLAUSNOMI_CHECKLIST.md  README.md  pyproject.toml  requirements.txt
skills/bezko/workspace-scruffy/klausnomi/src/klausnomi/: __main__.py  cli.py  client.py  mcp.py  models.py
skills/bezko/workspace-scruffy/klausnomi/src/klausnomi.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skills/bezko/workspace-scruffy/klausnomi/tests/: test_klausnomi.py
(+2096 files in other folders)
